gitops-push-sample/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: node-api
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 3000
