gitops-push-sample/6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-service
  namespace: log-viewer
spec:
  selector:
    app: log
  ports:
  - port: 8080
    targetPort: 8080
